# ai-micro-businesses-assistant

./: .env.example  .gitignore  Agent_MCP.md  DEVELOP.md  Dockerfile.toolbox  PROJECT.md  README.md  docker-compose.yml  folder_structure.txt  main.py  pyproject.toml  requirements.txt
.github/workflows/: python_workflow.yml
config/: settings.py  tools.template.yaml  tools.yaml
scripts/: generate_tools_config.py  generate_tools_config.sh
src/: main.py
src/application/dtos/: health_check_dto.py
src/application/ports/: health_check_port.py
src/application/services/: health_check_service.py
src/application/usecases/: health_check_usecase.py
src/business_assistant/application/interfaces/: repository_interfaces.py
src/business_assistant/application/services/: chat_service.py  conversation_service.py  health_service.py
src/business_assistant/config/: settings.py
src/business_assistant/domain/models/: conversation.py  health.py
src/business_assistant/infrastructure/persistence/: __init__.py  connection.py  migration.py
src/business_assistant/infrastructure/services/: conversation_manager.py
src/business_assistant/infrastructure/tools/: __init__.py  calculator_tool.py
src/business_assistant/infrastructure/web/: app.py  server.py
src/business_assistant/interface/cli/: chat_cli.py
src/cli/: __init__.py  test_agent.py
src/config/: __init__.py  agents.py  env.py
src/infrastructure/ai/agents/openrouter/: agent.py
src/interface/cli/: main.py
src/prompts/: coder.md  coordinator.md  planner.md
tests/: __init__.py  conftest.py  test_main.py
(+27 files in other folders)
