[project]
name = "ai-micro-businesses-assistant"
version = "0.1.0"
description = "AI Micro Businesses Assistant  es una iniciativa Open Source de Liwaisi Tech que usando Asistentes de Inteligencia Artificial ayuda a soportar la operación diaria de las pequeñas y medianas empresas en Zonas Rurales de Colombia."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
